--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "debs-pos",
   "private": true,
-  "version": "0.0.0",
+  "version": "3.15.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -39,6 +39,7 @@
     "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
