Deploy All: Final sync with manual backend deployment

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:e2e": "playwright test",
     "preview": "vite preview",
     "clasp:login": "clasp login",
-    "deploy:backend": "clasp push",
+    "sync-api": "node scripts/sync-api-url.cjs",
+    "deploy:backend": "clasp push && npm run sync-api",
     "audit:mod": "node scripts/audit-modularity.cjs",
     "audit:deps": "node scripts/audit-deps.cjs",
     "audit:ui": "node scripts/audit-ui.cjs",
