Fix: Corrected truncated API URL

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview",
     "clasp:login": "clasp login",
     "sync-api": "node scripts/sync-api-url.cjs",
-    "deploy:backend": "clasp push && npm run sync-api",
+    "deploy:backend": "clasp push",
     "audit:mod": "node scripts/audit-modularity.cjs",
     "audit:deps": "node scripts/audit-deps.cjs",
     "audit:ui": "node scripts/audit-ui.cjs",
