feat: Finalize Stitch UI Redesign (Dark Mode & Deployment Fixes)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "audit:deps": "node scripts/audit-deps.cjs",
     "audit:ui": "node scripts/audit-ui.cjs",
     "audit:comp": "node scripts/audit-components.cjs",
-    "audit": "npm run audit:mod && npm run audit:comp && npm run audit:ui && npm run audit:deps"
+    "audit:smart": "node scripts/audit-smart.cjs",
+    "deploy:smart": "node scripts/deploy-smart.cjs",
+    "audit": "npm run audit:smart && npm run audit:mod && npm run audit:comp && npm run audit:ui && npm run audit:deps"
   },
   "dependencies": {
     "framer-motion": "^12.34.0",
