--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_URL=https://script.google.com/macros/s/AKfycbzi9m6kfXn-SQmh0gs5IfCyJBwyuTvo290C0m_1-WUUm-xi9ccqiVT5cvqQpjn1JkS7Rw/exec
+
+STITCH_API_KEY=AQ.Ab8RN6J_AA5zij9XoTsJ-U3fI91lE6QFPpMLFrRfhObeIvc-Bg
