ci: Setup full CI/CD automation for backend (GAS) deployment

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "clasp:login": "clasp login",
     "sync-api": "node scripts/sync-api-url.cjs",
     "deploy:backend": "clasp push",
+    "deploy:all": "npm run build && npm run deploy:backend",
     "backup": "node scripts/backup-data.js",
+    "setup:gascicd": "node scripts/setup-gas-cicd.cjs",
     "audit:mod": "node scripts/audit-modularity.cjs",
     "audit:deps": "node scripts/audit-deps.cjs",
     "audit:ui": "node scripts/audit-ui.cjs",
