--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy:all": "npm run build && npm run deploy:backend",
     "backup": "node scripts/backup-data.js",
     "setup:gascicd": "node scripts/setup-gas-cicd.cjs",
+    "fix:cicd": "node scripts/fix-cicd.cjs",
     "audit:mod": "node scripts/audit-modularity.cjs",
     "audit:deps": "node scripts/audit-deps.cjs",
     "audit:ui": "node scripts/audit-ui.cjs",
