--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "debs-pos",
   "private": true,
-  "version": "3.15.1",
+  "version": "4.0.0",
   "type": "module",
+  "description": "Offline-first Point of Sale (POS) system built with React 19, Vite, and IndexedDB",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,22 +11,7 @@
     "test": "vitest",
     "test:e2e": "playwright test",
     "preview": "vite preview",
-    "clasp:login": "clasp login",
-    "sync-api": "node scripts/sync-api-url.cjs",
-    "deploy:backend": "clasp push",
-    "deploy:all": "npm run build && npm run deploy:backend",
-    "backup": "node scripts/backup-data.js",
-    "setup:gascicd": "node scripts/setup-gas-cicd.cjs",
-    "fix:cicd": "node scripts/fix-cicd.cjs",
-    "audit:mod": "node scripts/audit-modularity.cjs",
-    "audit:deps": "node scripts/audit-deps.cjs",
-    "audit:ui": "node scripts/audit-ui.cjs",
-    "audit:comp": "node scripts/audit-components.cjs",
-    "audit:smart": "node scripts/audit-smart.cjs",
-    "audit:sec": "node scripts/audit-security.cjs",
-    "audit:perf": "node scripts/audit-perf.cjs",
-    "deploy:smart": "node scripts/deploy-smart.cjs",
-    "audit": "npm run audit:smart && npm run audit:sec && npm run audit:perf && npm run audit:mod && npm run audit:comp && npm run audit:ui && npm run audit:deps"
+    "backup": "node scripts/backup-data.js"
   },
   "dependencies": {
     "framer-motion": "^12.34.0",
@@ -33,11 +19,24 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.5.1",
-    "vite-plugin-pwa": "^1.2.0"
+    "vite-plugin-pwa": "^1.2.0",
+    "idb": "^8.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@google/clasp": "^3.2.0",
     "@playwright/test": "^1.58.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
