--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,44 @@
 {
-    "name": "Deb's POS Pro",
-    "short_name": "DebsPOS",
-    "description": "Premium Point of Sale System for Deb's Manager",
-    "start_url": ".",
-    "display": "standalone",
-    "background_color": "#0f172a",
-    "theme_color": "#10b981",
-    "orientation": "portrait",
-    "icons": [
-        {
-            "src": "vite.svg",
-            "sizes": "any",
-            "type": "image/svg+xml",
-            "purpose": "any maskable"
-        }
-    ]
+  "name": "Deb's POS Pro",
+  "short_name": "Deb's POS",
+  "description": "Sistem Manajemen Kasir Offline-First",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#10b981",
+  "background_color": "#F8FAFC",
+  "icons": [
+    {
+      "src": "pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["business", "productivity", "finance"],
+  "shortcuts": [
+    {
+      "name": "Point of Sale",
+      "short_name": "POS",
+      "description": "Buka halaman kasir",
+      "url": "/?view=POS",
+      "icons": [{ "src": "pwa-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Inventory",
+      "short_name": "Stok",
+      "description": "Kelola inventaris",
+      "url": "/?view=INVENTORY",
+      "icons": [{ "src": "pwa-192x192.png", "sizes": "192x192" }]
+    }
+  ],
+  "screenshots": [],
+  "prefer_related_applications": false
 }
