refactor: migrate to IndexedDB offline-first architecture (v4.0.0)

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # Deb's POS Pro - Environment Configuration
 # Copy this file to .env and fill in your values
 
-# Required: Google Apps Script Web App URL
-# Get this from: GAS Dashboard > Deploy > Web App > Web App URL
-VITE_API_URL=https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec
+# Optional: Sentry Error Monitoring
+# Create account at https://sentry.io and get your DSN
+# VITE_SENTRY_DSN=https://your-sentry-dsn@sentry.io/123456
 
 # Optional: Feature flags
 # VITE_DEBUG_MODE=false
 # VITE_ENABLE_PWA=true
 # VITE_ENABLE_HAPTICS=true
+
+# Note: App works without any environment variables (fully offline)
