--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-slot": "^1.0.2",
+    "bcryptjs": "^2.4.3",
+    "@sentry/react": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -54,10 +56,10 @@
     "jsdom": "^28.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "vite": "npm:rolldown-vite@7.2.5",
+    "vite": "^5.4.19",
     "vitest": "^4.0.18"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "^5.4.19"
   }
 }
