feat: add comprehensive testing and audit infrastructure

--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "test": "vitest",
+    "lint:fix": "eslint . --fix",
+    "test": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run --dir src",
     "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "node scripts/run-tests.js",
+    "test:ci": "node scripts/run-tests.js --ci",
+    "audit": "node scripts/audit.js",
+    "audit:security": "node scripts/audit.js --security",
+    "audit:performance": "node scripts/audit.js --performance",
+    "audit:a11y": "node scripts/audit.js --a11y",
     "preview": "vite preview",
     "backup": "node scripts/backup-data.js"
   },
