--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "framer-motion": "^12.34.0",
     "idb": "^8.0.0",
     "lucide-react": "^0.561.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.5.1",
